@@ -1,4 +1,4 @@
  - Add categories to many types in MIME database
- - Fix gnome_url_show
- - Need a way to get all apps in the app registry
  - Better sorting on the MIME types tree
+ - Disable look at content for now
+ - Edit MIME type directly with command line option
