@@ -1,5 +1,10 @@
 2002-01-27  Bradford Hovinen  <hovinen@ximian.com>
 
+	* service-info.c (service_info_load_all): Always set run_program
+	to TRUE
+
+	* service-edit-dialog.c (fill_dialog): Disable look at content toggle
+
 	* mime-type-info.c (mime_category_info_load_all): Call
 	_get_mime_application
 
